<resources>
    <string name="app_name">Biblioteca Infnet</string>
    <string name="home">Home</string>
    <string name="lista">Lista</string>
    <string name="editar">Editar</string>
    <string name="novo">Novo</string>
    <string name="inserir">Inserir</string>
    <string name="detalhes">Detalhes</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="cadastro">Cadastro</string>
    <string name="logo_da_infnet">Logo da Infnet</string>
    <string name="titulo">Titulo</string>
    <string name="autor">autor</string>
    <string name="resumo">resumo</string>
    <string name="paginas">"Páginas   "</string>
    <string name="eniar_por_email">Eniar por Email</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirmar_sua_senha">Confirmar sua senha*</string>
    <string name="cadastre_sua_senha">Cadastre sua senha*</string>
    <string name="cadastro_de_usu_rio">Cadastro de Usuário</string>
    <string name="escolha_um_apelido">Escolha um apelido</string>
    <string name="total_de_livros_cadastrados">Total de Livros Cadastrados:</string>
    <string name="_0">0</string>
    <string name="titulo_do_livro">Titulo do Livro</string>
    <string name="descri_o_ou_subt_tulo">Descrição ou subtítulo</string>
    <string name="autor_do_livro">Autor do livro</string>
    <string name="p_ginas">Páginas:</string>
    <string name="salvar">Salvar</string>
    <string name="deletar">Deletar</string>
    <string name="resumo2">Resumo</string>
    <string name="n_mero_de_p_ginas">número de páginas</string>
    <string name="total_de_livros_cadastrados2">Total de Livros Cadastrados:</string>
    <string name="_02">0</string>
    <string name="cone_utilizado_para_mostrar_o_password_ao_inv_s_dos_aster_scos">Ícone utilizado para mostrar o password ao invés dos asteríscos</string>
    <string name="cone_utilizado_para_mostrar_o_password_ao_inv_s_dos_aster_scos2">Ícone utilizado para mostrar o password ao invés dos asteríscos</string>
    <string name="_03">0</string>
    <string name="insiraseunome">Insira o seu nome*</string>
    <string name="insira">"Insira o seu nome* "</string>
    <string name="show_multi_choice_confirmation_dialog">Show multi-choice confirmation dialog</string>
    <string name="LiveDataTotal">Edição de Livro - Total de Livros Cadastrados:</string>
    <string name="n_mero_de_p_ginasNew">Número de páginas</string>
    <string name="titulo_do_livroNew">Titulo do Livro</string>
    <string name="descri_o_ou_subt_tuloNew">Descrição ou subtítulo</string>
    <string name="autor_do_livroNew">Autor do livro</string>
    <string name="resumoNew">Resumo</string>
    <string name="inserir_novo_livroNew">Inserir Novo Livro</string>
    <string name="LiveData_Lista">Destalhes do Livro - Total de Livros Cadastrados:</string>
    <string name="LiveData_NovoLivro">Novo Livro - Total de Livros Cadastrados:</string>


</resources>
